<resources>
    <string name="app_name">Рисовалка</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_profil">Профиль</string>
    <string name="title_activity_registr">Регистрация</string>

    <!-- Menu -->
    <string name="my_menu_clear">Очистить</string>
    <string name="my_menu_save">Сохранить</string>
    <string name="my_menu_settings">Настройки</string>
    <string name="my_menu_sigup">Авторизация</string>

    <!-- Settings -->
    <string name="setting_store_category">Настройка сохранения изображения</string>
    <string name="setting_store_path_head">Путь сохранения</string>
    <string name="setting_store_format_head">Формат сохраняемого изображения</string>
    <string name="settings_store_quality_head">Качество изображения</string>

    <string name="settings_store_format_key">settings_store_format</string>
    <string name="settings_store_path_key">settings_store_path</string>

    <!--Text for ProfilActivity-->
    <string name="buttonSignIn">ВХОД</string>
    <string name="inputName">Введите свой логин</string>
    <string name="inputPassword">Введите свой пароль</string>
    <string name="textViewReg">Создайте новый аккаунт</string>

    <!--Text for RegistrationActivity-->
    <string name="buttonCreateAcc">СОЗДАТЬ АККАУНТ</string>
    <string name="inputNameReg">Введите свой логин</string>
    <string name="inputPasswordReg">Введите свой пароль</string>
    <string name="inputPasswordAgainReg">Введите пароль еще раз</string>

    <!--User Activity-->
    <string name="title_activity_user">Профиль</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">This is app for Android</string>
    <string name="nav_header_subtitle">USER NAME</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Рисовалка</string>
    <string name="menu_gallery">Загрузки</string>
    <string name="menu_slideshow">Настройки</string>
    <!--Button-->
    <string name="delete">Удалить аккаунт</string>
    <string name="logout">Выйти</string>

</resources>