<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ProfilActivity">


    <EditText
        android:id="@+id/textInputNameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputName"
        android:inputType="text"/>

    <EditText
        android:id="@+id/textInputNamePasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSignIn"
        android:onClick="login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewReg"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        android:onClick="mvRegistration"/>

</LinearLayout>