<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/textInputNameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputNameReg"
        android:inputType="text"/>

    <EditText
        android:id="@+id/textInputPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_marg"
        android:hint="@string/inputPasswordReg"
        android:inputType="text"/>

    <EditText
        android:id="@+id/textInputPasswordAgainReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_marg"
        android:hint="@string/inputPasswordAgainReg"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCreateAcc"
        android:onClick="createAccount"/>

</LinearLayout>